--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation "androidx.camera:camera-extensions:1.0.0-alpha08"
     // If you want to use the CameraX Lifecycle library
     implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    implementation 'com.google.android.material:material:1.1.0'
 }
 repositories {
     mavenCentral()
